<resources>
    <string name="app_name">MapBox</string>
    <string name="birth_date">Birthdate</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="full_name">Fullname</string>
    <string name="sign_in_here">Already Registered? Sign in here</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_here">Not Registered? Sign up here</string>
    <string name="api_key">AIzaSyAhcdv39-zST_n2V9sMKvf9AusuJxKiKdI</string>
</resources>
